# rag-chat-openai

./: README.md  main.py  pyproject.toml  requirements.txt
sample_data/: sample_data.txt
src/: chat_history.py  chat_history_writer.py  load_vector_db.py  messages.py  openai_client.py  settings.py  templates.py  user_input_formatter.py  wordpress_export_to_text.py
tests/: test_history.py  test_user_input_formatter.py
