[project]
name = "rag-chat-openai"
version = "0.1.0"
description = "RAG demo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-openai>=0.2.10",
    "langchain>=0.3.9",
    "langchain-community>=0.3.8",
    "docarray>=0.40.0",
    "loguru>=0.7.2",
    "ruff>=0.8.1",
    "openai>=1.55.3",
    "sentence-transformers>=3.3.1",
    "langchain-chroma>=0.1.4",
    "requests>=2.32.3",
    "xmltodict>=0.14.2",
]
